# vulkan_ze

./: .gitignore  CMakeLists.txt  README.md  todo.txt
.github/workflows/: cmake-single-platform.yml  main.yml
cmake/: imgui.cmake  jolt.cmake  libraries.cmake  shaders.cmake
engine/include/z0/: application.hpp  application_config.hpp  camera.hpp  color.hpp  cubemap.hpp  image.hpp  input.hpp  input_event.hpp  loader.hpp  log.hpp  mainloop.hpp  material.hpp  mesh.hpp  node.hpp  object.hpp  resource.hpp  run_loop.hpp  scene.hpp  texture.hpp  transform.hpp  vertex.hpp  viewport.hpp  window.hpp
engine/include/z0/helpers/: window_helper.hpp
engine/include/z0/nodes/: camera.hpp  directional_light.hpp  environment.hpp  light.hpp  mesh_instance.hpp  multi_mesh_instance.hpp  node.hpp  omni_light.hpp  physics_body.hpp  rigid_body.hpp  skybox.hpp  spot_light.hpp  static_body.hpp
engine/include/z0/resources/: cubemap.hpp  image.hpp  material.hpp  mesh.hpp  multi_mesh.hpp  resource.hpp  shape.hpp  texture.hpp
engine/include/z0/ui/: debug_ui.hpp
engine/include/z0/utils/: blocking_queue.hpp
engine/include/z0/vulkan/: default_renderer.hpp  device.hpp  main_loop.hpp  os.hpp  scene_renderer.hpp  shadowmap_renderer.hpp  vulkan_buffer.hpp  vulkan_cubemap.hpp  vulkan_descriptors.hpp  vulkan_device.hpp  vulkan_image.hpp  vulkan_instance.hpp  vulkan_model.hpp  vulkan_pipeline_config.hpp  vulkan_renderer.hpp  vulkan_shader.hpp  vulkan_stats.hpp  vulkan_texture.hpp  vulkan_ubo.hpp  window.hpp  window_helper.hpp
engine/include/z0/vulkan/framebuffers/: base_frame_buffer.hpp  color_attachement.hpp  color_attachement_hdr.hpp  color_attachement_multisampled.hpp  color_attachment.hpp  color_attachment_hdr.hpp  color_attachment_multisampled.hpp  depth_buffer.hpp  multisampled.hpp  shadow_map.hpp  tone_map.hpp
engine/include/z0/vulkan/renderers/: base_meshes_renderer.hpp  base_postprocessing_renderer.hpp  base_renderer.hpp  base_renderpass.hpp  base_shared_image.hpp  depth_buffer.hpp  depth_prepass_renderer.hpp  postprocessing_renderer.hpp  scene_renderer.hpp  shadow_map.hpp  shadowmap.hpp  shadowmap_renderer.hpp  simple_postprocessing_renderer.hpp  skybox_renderer.hpp  tonemapping_renderer.hpp
engine/shaders/: default.frag  default.vert  depth_buffer.frag  depth_prepass.frag  depth_prepass.vert  dummy.frag  input_datas.glsl  lighting.glsl  quad.frag  quad.vert  shadowmap.frag  shadowmap.vert  skybox.frag  skybox.vert  triangle.frag  triangle.vert  ubo.glsl
engine/shaders/postprocessing/: reinhard.frag
engine/shaders/tonemaps/: grayscale.frag  reinhard.frag  sepia.frag
engine/src/: application.cpp  camera.cpp  cubemap.cpp  image.cpp  input.cpp  input_event.cpp  libraries.cpp  loader.cpp  mainloop.cpp  mesh.cpp  node.cpp  object.cpp  resource.cpp  texture.cpp  transform.cpp  viewport.cpp
engine/src/helpers/: window_helper_glfw.cpp
engine/src/nodes/: camera.cpp  environment.cpp  mesh_instance.cpp  multi_mesh_instance.cpp  node.cpp  omni_light.cpp  physics_body.cpp  rigid_body.cpp  skybox.cpp  spot_light.cpp  static_body.cpp
engine/src/resources/: cubemap.cpp  image.cpp  mesh.cpp  multi_mesh.cpp  resource.cpp  shape.cpp  texture.cpp
engine/src/ui/: debug_ui.cpp
engine/src/vulkan/: default_renderer.cpp  device.cpp  main_loop.cpp  scene_renderer.cpp  shadowmap_renderer.cpp  vulkan_buffer.cpp  vulkan_cubemap.cpp  vulkan_descriptors.cpp  vulkan_device.cpp  vulkan_image.cpp  vulkan_instance.cpp  vulkan_model.cpp  vulkan_pipeline_config.cpp  vulkan_renderer.cpp  vulkan_shader.cpp  vulkan_stats.cpp  vulkan_texture.cpp  window_glfw.cpp  window_helper.cpp
engine/src/vulkan/framebuffers/: base_frame_buffer.cpp  color_attachement.cpp  color_attachement_hdr.cpp  color_attachement_multisampled.cpp  color_attachment.cpp  color_attachment_hdr.cpp  color_attachment_multisampled.cpp  depth_buffer.cpp  multisampled.cpp  shadow_map.cpp  tone_map.cpp
engine/src/vulkan/renderers/: base_meshes_renderer.cpp  base_postprocessing_renderer.cpp  base_renderer.cpp  base_renderpass.cpp  depth_buffer.cpp  depth_prepass_renderer.cpp  postprocessing_renderer.cpp  scene_renderer.cpp  shadow_map.cpp  shadowmap.cpp  shadowmap_renderer.cpp  simple_postprocessing_renderer.cpp  skybox_renderer.cpp  tonemapping_renderer.cpp
example/: main.cpp
models/: cube.blend  cube.mtl  cube2.blend  cube2.glb  floor.blend  floor.glb  grass.blend  grass.glb  light.blend  light.glb  locker_1.glb  multi cube.blend  multi cube.blend1  multi cube.mtl  sphere.mtl  window.blend  window.glb
